docs: populate per-resource reference files from the standalone site (DOCS-20715)
Migrate Overview, Output, and Examples prose from docs/site/_docs into the
generated docs/resources/*.md skeletons, keeping the generated Supported
operations, Flags, and Required token scopes tables intact. Fully author
dql-queries.md and cloud-integrations.md, which are not CRUD resources and
had no generated tables. Point extensions.md and live-debugger.md at the
existing standalone guides instead of duplicating their content. Leave
edgeconnect, notifications, platform-tokens, and users-groups as skeletons
with a note, since they have no matching standalone site page.